# rust-embeddings

./: CHANGELOG.md  Cargo.toml  README.ja.md  README.md  README.zh-CN.md  deny.toml
benchrs-staging/: Cargo.toml  README.md
benchrs-staging/src/: lib.rs
benchrs-staging/web/: index.html  package.json
benchrs-staging/web/src/: App.css  App.tsx  main.tsx
benchrs-staging/web/src/components/: Header.tsx  Methodology.tsx  ResultsTable.tsx  RunPanel.tsx
benchrs-staging/web/src/lib/: api.ts  store.ts  types.ts
examples/: basic.rs  benchmark.rs  local.rs  similarity.rs
examples/embedding_models/: main.rs  stats.rs
src/: backoff.rs  batch.rs  client.rs  error.rs  lib.rs  similarity.rs  usage.rs
src/local/: download.rs  inference.rs  mod.rs  model.rs
src/local/tokenizer_data/: all_minilm_l12_v2.json.zst  bge_small_en_v1_5.json.zst  gte_small.json.zst
src/provider/: cohere.rs  gemini.rs  jina.rs  mod.rs  openai.rs  voyage.rs
tests/: backoff.rs  batch.rs  cohere.rs  cost_tracking.rs  fallback.rs  gemini.rs  jina.rs  local_cost_tracking.rs  local_e2e.rs  openai.rs  similarity.rs  voyage.rs
