[package]
name = "embedrs"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Unified cloud embedding API client for OpenAI, Cohere, Gemini, Voyage, and Jina"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
documentation = "https://docs.rs/embedrs"
keywords = ["embedding", "openai", "cohere", "vector", "ai"]
categories = ["api-bindings"]
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
tokio = { version = "1", features = ["sync", "time"] }
thiserror = "2"
rand = "0.9"
futures = "0.3"
tracing = { version = "0.1", optional = true }

[features]
default = []
tracing = ["dep:tracing"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
