[package]
name = "benchrs"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Reproducible benchmark experiments for airs project decisions"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ruzstd = "0.8"
zstd = "0.13"
embedrs = { path = "../embedrs", features = ["local"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tokio-stream = "0.1"

[[bin]]
name = "embedding_models"
path = "src/bin/embedding_models.rs"

[[bin]]
name = "embedding_models_web"
path = "src/bin/embedding_models_web.rs"
